# app/Models/User.php
@@ -1,13 +1,15 @@
 <?php
 
-namespace Viory;
+namespace Viory\Models;
 
+use Laravel\Passport\HasApiTokens;
 use Illuminate\Notifications\Notifiable;
+use Illuminate\Database\Eloquent\Model;
 use Illuminate\Foundation\Auth\User as Authenticatable;
 
 class User extends Authenticatable
 {
-    use Notifiable;
+    use HasApiTokens, Notifiable;
 
     /**
      * The attributes that are mass assignable.
@@ -15,7 +17,7 @@ class User extends Authenticatable
      * @var array
      */
     protected $fillable = [
-        'name', 'email', 'password',
+        'country_id', 'firstname', 'lastname', 'username', 'email', 'password', 'zipcode', 'dob', 'gender', 'contact', 'is_verified', 'is_social', 'social_type', 'social_token', 'device_token', 'activation_token', 'last_login'
     ];
 
     /**
@@ -24,6 +26,16 @@ class User extends Authenticatable
      * @var array
      */
     protected $hidden = [
-        'password', 'remember_token',
+	    'password', 'is_active', 'is_deleted', 'remember_token',
     ];
+
+	public function country()
+	{
+		return $this->belongsTo('Viory\Country');
+	}
+
+	public function profilePictures()
+	{
+		return $this->hasMany('Viory\ProfilePicture');
+	}
 }
